# packages/platform/db-postgres/src/schema/saved-searches.ts
@@ -12,8 +12,6 @@ export const savedSearches = latitudeSchema.table(
     name: varchar("name", { length: 256 }).notNull(),
     query: text("query"),
     filterSet: jsonb("filter_set").$type<FilterSet>().notNull(),
-    assignedUserId: cuid("assigned_user_id"),
-    createdByUserId: cuid("created_by_user_id").notNull(),
     deletedAt: tzTimestamp("deleted_at"),
     ...timestamps(),
   },
@@ -21,7 +19,6 @@ export const savedSearches = latitudeSchema.table(
     organizationRLSPolicy("saved_searches"),
     index("saved_searches_organization_id_idx").on(t.organizationId),
     index("saved_searches_project_id_idx").on(t.organizationId, t.projectId, t.deletedAt),
-    index("saved_searches_assigned_user_id_idx").on(t.organizationId, t.assignedUserId, t.deletedAt),
     unique("saved_searches_unique_slug_per_project_idx")
       .on(t.organizationId, t.projectId, t.slug, t.deletedAt)
       .nullsNotDistinct(),
